fixed skills so that it would center on mobile

--- a/jobs/static/jobs/css/style.css
+++ b/jobs/static/jobs/css/style.css
@@ -65,7 +65,6 @@ a {
 
 .skills ul {
     width: 80%;
-    margin: 20px auto;
     list-style-type: none;
     text-align: center;
 }
